<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchArticlesFragment">


    <Button
        android:id="@+id/article_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_recommended_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search..."
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@id/layout_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/publisher_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher_box"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"/>
        <Spinner
            android:id="@+id/publisher_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_publisher"
        android:layout_marginTop="@dimen/text_cardview_padding">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories_box"
            android:layout_marginLeft="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/category_input"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/input_box"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_category"
        android:layout_marginTop="@dimen/text_cardview_padding">

        <TextView
            android:id="@+id/from_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_picker"
            android:layout_marginLeft="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/date_picker_from"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/from_view"
            android:layout_centerVertical="true"
            android:paddingRight="30dp"/>

        <TextView
            android:id="@+id/to_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_picker"
            android:layout_toStartOf="@id/date_picker_to"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/date_picker_to"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingRight="30dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/filter_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_search_button"
        app:layout_constraintBottom_toTopOf="@+id/article_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

</androidx.constraintlayout.widget.ConstraintLayout>