...
            app:layout_constraintVertical_bias="0.511"
            tools:layout_editor_absoluteX="-55dp">

            <!-- This is a ConstraintLayout for the fixed portion of the CardView. The elements that
            lie within the fixed portion of the CardView can be constrained to this layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fixed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
                    android:layout_height="65dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/text_publisher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Publisher"
                    android:layout_marginLeft="@dimen/text_cardview_padding"
                    android:layout_marginRight="@dimen/text_cardview_padding"
                    android:ellipsize="end"
...
