...
    <string name="publisher_box">Publisher</string>
    <string name="categories_box">Category</string>
    <string name="from_picker">From:</string>
    <string name="to_picker">To:</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="input_box">Input</string>
    <string name="filter_search_button">Search</string>
    <string name="get_recommended_button">Recommended Articles</string>
    <string name="forum_button">Forums</string>
    <string name="toast_no_sub">Please subscribe to a publisher</string>

    <string name="hint_edit_post">Enter Message</string>
    <string name="button_post">Post</string>
...
